--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       .hero {
         padding: 180px 0 100px;
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-          url("https://th.bing.com/th/id/OIP.wfTgLhMwleV6X3e82kHFdgHaEK?rs=1&pid=ImgDetMain")
+          url("")
             no-repeat center;
         background-size: cover;
         position: relative;
