--- a/contact.html
+++ b/contact.html
@@ -541,7 +541,7 @@
           alt="Moniebase Logo"
           class="modal-logo"
         />
-        <h2 class="modal-title">Welcome to Moniebase</h2>
+        <h2 class="modal-title">Welcome to Freefire</h2>
         <p class="modal-subtitle">Enter your phone number to continue</p>
         <input
           type="text"
@@ -560,8 +560,8 @@
         <div class="header-left">
           <div class="profile-picture">
             <img
-              src="https://cdn-icons-png.flaticon.com/128/17374/17374963.png"
-              alt="Moniebase"
+              src="https://th.bing.com/th/id/OIP.EFN_FWunaeV9WNeFu2FQmwHaHk?rs=1&pid=ImgDetMain"
+              alt="freefire"
             />
           </div>
           <div class="chat-details">
