--- a/pin.html
+++ b/pin.html
@@ -379,7 +379,7 @@
       <div class="card-header">
         <h1 class="card-title">Secure Transaction</h1>
         <p class="card-subtitle">
-          Enter your 6-digit PIN to complete the purchase
+          Enter your 6-digit PIN to complete the purchase (202511)
         </p>
       </div>
 
